k8s/ingress/nginx/routing/red-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: red-pod
  labels:
    app: color-app-red
spec:
  containers:
  - image: nginx:alpine
    name: nginx-color-app
    ports:
    - containerPort: 80
    volumeMounts:
    - name: workdir
      mountPath: /usr/share/nginx/html
    resources:
      requests:
        cpu: 100m
        memory: 100Mi
      limits:
        cpu: 100m
        memory: 100Mi
  volumes:
  - name: workdir
    emptyDir: {}
