k8s/ingress/nginx/routing/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-green
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: color-app-green
