k8s/ingress/nginx/routing/red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-red
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: color-app-red
